# effective_yield_surface

./: 3d.txt  LICENSE  README.md  calc.fc  calc.pvd  calc.py  config.py  cubit01.jou  cubit02.jou  cubit03.jou  cubit04.jou  main.py  postprocess.py  pyproject.toml  template_2d.txt  test.fc  test.pvd  utils.py
calc/: calc_case1_step01.vtu
test/: test_case1_step01.vtu
