[tool.poetry]
name = "effective_yield_surface"
version = "0.1.0"
description = ""
authors = ["Vitaly Karpenko"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
seaborn = "^0.10.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
